--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,11 +25,11 @@ jobs:
       uses: ashutoshvarma/setup-ninja@v1
       with:
         # Ninja version. Make sure given ninja version exists in ninja github release
-        version: # default is 1.10.0
+        version: 1.10.0 # default is 1.10.0
         # Folder where ninja binary will be downloaded
-        dest: # optional, default is ninja_bin
+        # dest: # optional, default is ninja_bin
         # Override default platform detection logic. Accepted values are [mac, linux, win]
-        platform: # optional
+        platform: win # optional
 
     # Runs a single command using the runners shell
     - name: Run a one-line script
