--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,5 +38,5 @@ jobs:
     # Runs a set of commands using the runners shell
     - name: ninja build
       run: |
-        cmake -DMSVC=1 -DCMAKE_BUILD_TYPE:STRING=Release -G Ninja ../
+        cmake -DMSVC=1 -DCMAKE_BUILD_TYPE:STRING=Release -G Ninja ./
         ninja javascript_engine
