--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,28 +1,28 @@
 cmake_minimum_required(VERSION 3.0.0)
 
 if (MSVC)
-set(CMAKE_C_COMPILER clang-cl)
-set(CMAKE_CXX_COMPILER clang-cl)
+set(CMAKE_C_COMPILER "clang-cl.exe")
+set(CMAKE_CXX_COMPILER "clang-cl.exe")
 else()
 set(CMAKE_C_COMPILER clang)
 set(CMAKE_CXX_COMPILER clang++)
 endif()
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-set(CMAKE_BUILD_TYPE Debug)
+
+project(javascript_engine)
 
 if (MSVC)
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /EHa /Od /Z7 /Gz /FA /MDd /std:c++17 /W3")
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /EHa /O1 /Gz /MD /std:c++17")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /EHa /Od /Gz /FA /MDd /std:c++17 /W4 -Wno-unused-parameter")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /EHa /O1 /Gz /MD /std:c++17 /W4 -Wno-unused-parameter")
 else()
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g0 -O0 -std=c++17")
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -g0 -O0 -std=c++17")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g0 -O0 -std=c++17 -Wall")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -g0 -O0 -std=c++17 -Wall")
 endif()
 
 set(CMAKE_TRY_COMPILE_TARGET_TYPE STATIC_LIBRARY)
 
 set( EXTERNAL_LIB ${PROJECT_SOURCE_DIR}/externals)
-message(${EXTERNAL_LIB})
 set( V8 ${EXTERNAL_LIB}/v8)
 set( V8RES ${EXTERNAL_LIB}/v8/resource)
 if (MSVC)
@@ -37,9 +37,6 @@ link_directories(${V8LIB})
 
 file( GLOB_RECURSE SOURCES "${PROJECT_SOURCE_DIR}/src/*.cpp" )
 add_executable(javascript_engine ${SOURCES})
-
-set(CPACK_PROJECT_NAME ${PROJECT_NAME})
-set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 
 if (MSVC)
 target_link_libraries(javascript_engine icui18n.dll.lib icuuc.dll.lib v8.dll.lib v8_libbase.dll.lib v8_libplatform.dll.lib)
