--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,6 @@ jobs:
     # Runs a set of commands using the runners shell
     - name: ninja build
       run: |
-        where clang-cl
+        gcm clang-cl
         cmake -DMSVC=1 -DCMAKE_BUILD_TYPE:STRING=Release -DCMAKE_C_COMPILER="clang-cl.exe" -DCMAKE_CXX_COMPILER="clang-cl.exe" -G Ninja ./
         ninja javascript_engine
