--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,11 +33,10 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Run a one-line script
-      run: echo Hello, world!
+      run:  gcm clang-cl
 
     # Runs a set of commands using the runners shell
     - name: ninja build
       run: |
-        gcm clang-cl
         cmake -DMSVC=1 -DCMAKE_BUILD_TYPE:STRING=Release -DCMAKE_C_COMPILER="clang-cl.exe" -DCMAKE_CXX_COMPILER="clang-cl.exe" -G Ninja ./
         ninja javascript_engine
