--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,5 +39,5 @@ jobs:
     # Runs a set of commands using the runners shell
     - name: ninja build
       run: |
-        cmake -DMSVC=1 -DCMAKE_BUILD_TYPE:STRING=Release -DCMAKE_C_COMPILER="clang-cl.exe" -DCMAKE_CXX_COMPILER="clang-cl.exe" -G Ninja ./
+        cmake -DMSVC=1 -DCMAKE_BUILD_TYPE:STRING=Release -DCMAKE_C_COMPILER="clang" -DCMAKE_CXX_COMPILER="clang++" -G Ninja ./
         ninja javascript_engine
