--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,20 +21,20 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-    #- name: Setup Ninja
-      #uses: ashutoshvarma/setup-ninja@v1
-      #with:
+    - name: Setup Ninja
+      uses: ashutoshvarma/setup-ninja@v1
+      with:
         # Ninja version. Make sure given ninja version exists in ninja github release
-        #version: 1.10.0 # default is 1.10.0
+        version: 1.10.0 # default is 1.10.0
         # Folder where ninja binary will be downloaded
         # dest: # optional, default is ninja_bin
         # Override default platform detection logic. Accepted values are [mac, linux, win]
-        #platform: win # optional
+        platform: win # optional
     - name: setup clang
       run: |
         Invoke-Expression (New-Object System.Net.WebClient).DownloadString('https://get.scoop.sh')
         scoop install llvm --global
-        scoop install ninja --global
+        #scoop install ninja --global
           
     # Runs a set of commands using the runners shell
     - name: ninja build
