--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.0.0)
 if (MSVC)
 set(CMAKE_C_COMPILER "clang-cl.exe")
 set(CMAKE_CXX_COMPILER "clang-cl.exe")
-else()
+elseif(APPLE)
 set(CMAKE_C_COMPILER clang)
 set(CMAKE_CXX_COMPILER clang++)
 endif()
