--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
         args: install llvm
     - name: setup clang
       run: |
-        cmake -DMSVC=1 -DCMAKE_BUILD_TYPE:STRING=Release -G Ninja ./
+        cmake -DCMAKE_C_COMPILER="C:\Program Files\LLVM\bin\clang-cl" -DCMAKE_CXX_COMPILER="C:\Program Files\LLVM\bin\clang-cl" -DCMAKE_BUILD_TYPE:STRING=Release -G Ninja ./
         ninja javascript_engine
 
     # - name: Setup Ninja
@@ -56,5 +56,5 @@ jobs:
     # Runs a set of commands using the runners shell
     #- name: ninja build
       #run: |
-        #cmake -DMSVC=1 -DCMAKE_BUILD_TYPE:STRING=Release -DCMAKE_C_COMPILER="clang-cl" -DCMAKE_CXX_COMPILER="clang-cl" -G Ninja ./
+        #cmake -DMSVC=1 -DCMAKE_BUILD_TYPE:STRING=Release -DCMAKE_C_COMPILER="C:\Program Files\LLVM\bin\clang-cl" -DCMAKE_CXX_COMPILER="C:\Program Files\LLVM\bin\clang-cl" -G Ninja ./
         #ninja javascript_engine
