--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,8 @@ jobs:
       run: |
         cmake -DCMAKE_C_COMPILER="C:/Program Files/LLVM/bin/clang-cl.exe" -DCMAKE_CXX_COMPILER="C:/Program Files/LLVM/bin/clang-cl.exe" -DCMAKE_BUILD_TYPE:STRING=Release -G Ninja ./
         ninja javascript_engine
-
+    - name: path Checks
+      run: ls "C:/Program Files (x86)/Microsoft Visual Studio/2017/Community/VC/Tools/MSVC"
     # - name: Setup Ninja
     #   uses: ashutoshvarma/setup-ninja@v1
     #   with:
