--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,8 @@ jobs:
         ninja javascript_engine
     - name: path Checks
       run: ls "C:/Program Files (x86)/Microsoft Visual Studio/2017/Community/VC/Tools/MSVC"
+      shell: cmd
+        
     # - name: Setup Ninja
     #   uses: ashutoshvarma/setup-ninja@v1
     #   with:
