--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
       with:
         # Arguments to pass to Chocolatey
         args: install llvm
-    - name: set vers 
+    - name: Set vers
       run: "C:/Program Files (x86)/Microsoft Visual Studio/2017/Community/VC/Auxiliary/Build/vcvarsall.bat" x64
       shell: cmd
     - name: setup clang
