--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,7 @@ jobs:
       run: |
          brew install Ninja
          brew install llvm
+         brew install cmake
     - name: Build (mac)
       if: runner.os == 'macOS'
       run: |
