--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,6 +52,8 @@ jobs:
     - name: Build (mac)
       if: runner.os == 'macOS'
       run: |
+        mkdir build
+        cd build
         cmake -DCMAKE_BUILD_TYPE=Release -G Ninja ./
         ninja javascript_engine
 # sh make_bundle.sh
