--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,11 +4,12 @@ name: CI
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: [push]
+  # push:
+  #   branches: [ master ]
+  # pull_request:
+  #   branches: [ master ]
+  #   types: [closed]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -38,10 +39,19 @@ jobs:
     - name: Build (Windows)
       if: runner.os == 'Windows'
       run: |
+        mkdir build
+        cd build
         "C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
-        cmake -DCMAKE_C_COMPILER="C:/Program Files/LLVM/bin/clang-cl.exe" -DCMAKE_CXX_COMPILER="C:/Program Files/LLVM/bin/clang-cl.exe" -DCMAKE_BUILD_TYPE:STRING=Release -G Ninja ./ "-DCMAKE_LINKER:FILEPATH=C:/Program Files/LLVM/bin/lld-link.exe"
-        ninja -v javascript_engine
+        cmake -DCMAKE_C_COMPILER="C:/Program Files/LLVM/bin/clang-cl.exe" -DCMAKE_CXX_COMPILER="C:/Program Files/LLVM/bin/clang-cl.exe" -DCMAKE_BUILD_TYPE:STRING=Release -G Ninja ../ "-DCMAKE_LINKER:FILEPATH=C:/Program Files/LLVM/bin/lld-link.exe"
+        ninja javascript_engine
       shell: cmd
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        # Artifact name
+        name: win_dll # optional
+        # A file, directory or wildcard pattern that describes what to upload
+        path: build/script_engine.dll
 
     - name: Install (mac)
       if: runner.os == 'macOS'
