--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,9 +39,7 @@ jobs:
     - name: Build (Windows)
       if: runner.os == 'Windows'
       run: |
-        call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
-        cmake -DCMAKE_C_COMPILER="C:/Program Files/LLVM/bin/clang-cl.exe" -DCMAKE_CXX_COMPILER="C:/Program Files/LLVM/bin/clang-cl.exe" -DCMAKE_BUILD_TYPE:STRING=Release -G Ninja ./ "-DCMAKE_LINKER:FILEPATH=C:/Program Files/LLVM/bin/lld-link.exe"
-        ninja script_engine
+        call build_win.bat
       shell: cmd
     - name: Upload a Build Artifact
       if: runner.os == 'Windows'
@@ -61,7 +59,10 @@ jobs:
     - name: Build (mac)
       if: runner.os == 'macOS'
       run: |
-        call build_win.bat
+        mkdir build
+        cd build
+        cmake -DCMAKE_BUILD_TYPE=Release -G Ninja ../
+        ninja script_engine
     - name: Upload a Build Artifact
       if: runner.os == 'macOS'
       uses: actions/upload-artifact@v2
