--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,10 @@ name: CI
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
-on: [push]
-  # push:
+on:
+  push:
+    branches-ignore:
+      - master
   #   branches: [ master ]
   # pull_request:
   #   branches: [ master ]
@@ -39,7 +41,9 @@ jobs:
     - name: Build (Windows)
       if: runner.os == 'Windows'
       run: |
-        call build_win.bat
+        call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
+        cmake -DCMAKE_C_COMPILER="C:/Program Files/LLVM/bin/clang-cl.exe" -DCMAKE_CXX_COMPILER="C:/Program Files/LLVM/bin/clang-cl.exe" -DCMAKE_BUILD_TYPE:STRING=Release -G Ninja ./ "-DCMAKE_LINKER:FILEPATH=C:/Program Files/LLVM/bin/lld-link.exe"
+        ninja script_engine
       shell: cmd
     - name: Upload a Build Artifact
       if: runner.os == 'Windows'
